Properly organized the static files for each app

--- a/twincat_logger/templates/home.html
+++ b/twincat_logger/templates/home.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    
-      <title>HOME</title>
-    
+        {% load static %}
+        <title>HOME</title>
+        
   </head>
   <body>
-    {% load static %}
+    
 
     <h1>Home view</h1>
-    <img src="{% static 'img/http.png' %}" alt="My image">
+    <img src="{% static 'twincat_logger/img/http.png' %}" alt="My image">
+    <img src="{% static 'twincat_logger/img/question-mark.png' %}" alt="Question mark">
   </body>
 </html>
